--- a/frontend/src/app/pages/bet-form/bet-form-page.component.scss
+++ b/frontend/src/app/pages/bet-form/bet-form-page.component.scss
@@ -1,17 +1,10 @@
 @use '../../../styles/mixins' as *;
 
-:host {
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  height: 100%;
-  padding-top: 48px;
-}
-
 .bet-form-page {
   width: 100%;
   max-width: 640px;
   padding: 24px;
+  margin: 0 auto;
 }
 
 ea-card {
